# dota-clock

./: Cargo.toml  README.md  flake.nix  gamestate_integration_dotaclock.cfg  justfile
src/: clock.rs  config.rs  events.rs  gsi.rs  icons.rs  main.rs  overlay.rs  server.rs
src/overlay/: mod.rs  wayland.rs  windows.rs
src/patches/: mod.rs  v7_41.rs
