[package]
name = "dota-clock"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gtk4 = { version = "0.9", features = ["v4_12"] }
gtk4-layer-shell = "0.4"
toml = "0.8"
dirs = "6"
